--- a/frontend/unity-spa/features/scholarship/students.html
+++ b/frontend/unity-spa/features/scholarship/students.html
@@ -1,9 +1,9 @@
-<div class="max-w-6xl mx-auto px-4 py-8">
+<div class="max-w-7xl mx-auto px-4 py-8">
   <div class="flex items-start justify-between mb-6">
     <div>
       <h2 class="text-2xl font-semibold text-gray-800">{{ vm.title }}</h2>
       <p class="text-gray-600">
-        This screen is being migrated from the legacy CI app. Use the button below to open the current Students with Scholarships page.
+        View all students with active or pending scholarship and discount assignments.
       </p>
     </div>
     <a class="inline-flex items-center px-3 py-2 rounded bg-blue-600 text-white hover:bg-blue-700"
@@ -12,22 +12,145 @@
     </a>
   </div>
 
-  <div class="bg-white rounded shadow p-6">
-    <div class="flex items-center justify-between">
-      <div>
-        <h3 class="text-lg font-semibold text-gray-800">Students with Scholarships (Legacy)</h3>
-        <p class="text-gray-600">Opens the current CI list of students with scholarships/discounts.</p>
+  <!-- Filters -->
+  <div class="bg-white rounded shadow p-4 mb-4">
+    <div class="flex items-center gap-4">
+      <div class="flex-1">
+        <label class="block text-sm font-medium text-gray-700 mb-1">School Year/Term</label>
+        <select class="form-control" ng-model="vm.selectedTerm" ng-change="vm.onTermChange()" ng-disabled="vm.loading">
+          <option ng-repeat="term in vm.terms" ng-value="term.intID">
+            {{ term.term_student_type }} {{ term.enumSem }} {{ term.term_label }} SY {{ term.strYearStart }} - {{ term.strYearEnd }}
+          </option>
+        </select>
       </div>
-      <a class="inline-flex items-center px-3 py-2 rounded bg-indigo-600 text-white hover:bg-indigo-700"
-         ng-href="{{ vm.links.scholarshipStudents }}" target="_blank" rel="noopener">
-        <span class="fas fa-external-link-alt mr-2"></span> Open CI Students with Scholarships
-      </a>
+      <div class="flex-1">
+        <label class="block text-sm font-medium text-gray-700 mb-1">Search Student</label>
+        <input type="text" 
+               class="form-control" 
+               ng-model="vm.searchQuery" 
+               ng-change="vm.filterStudents()" 
+               placeholder="Search by name or student number..."
+               ng-disabled="vm.loading">
+      </div>
     </div>
   </div>
 
-  <div class="mt-6 bg-white rounded shadow p-6">
-    <p class="text-gray-600">
-      Placeholder content. This page will later render API-driven scholarship assignments from the Laravel service.
-    </p>
+  <!-- Loading State -->
+  <div ng-if="vm.loading" class="bg-white rounded shadow p-8 text-center">
+    <i class="fas fa-spinner fa-spin fa-2x text-blue-600 mb-3"></i>
+    <p class="text-gray-600">Loading students...</p>
+  </div>
+
+  <!-- Error State -->
+  <div ng-if="!vm.loading && vm.error" class="bg-red-50 border border-red-200 rounded p-4 mb-4">
+    <div class="flex items-start">
+      <i class="fas fa-exclamation-circle text-red-600 mt-1 mr-3"></i>
+      <div>
+        <h4 class="font-semibold text-red-800">Error</h4>
+        <p class="text-red-700">{{ vm.error }}</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Students List -->
+  <div ng-if="!vm.loading && !vm.error" class="bg-white rounded shadow overflow-hidden">
+    <div class="p-4 border-b border-gray-200">
+      <h3 class="text-lg font-semibold text-gray-800">
+        Students with Scholarships/Discounts
+        <span class="text-sm font-normal text-gray-600">({{ vm.filteredStudents.length }} total)</span>
+      </h3>
+    </div>
+
+    <!-- Empty State -->
+    <div ng-if="vm.filteredStudents.length === 0" class="p-8 text-center">
+      <i class="fas fa-users fa-3x text-gray-400 mb-3"></i>
+      <p class="text-gray-600">
+        <span ng-if="!vm.searchQuery">No students with scholarships/discounts found for this term.</span>
+        <span ng-if="vm.searchQuery">No students match your search criteria.</span>
+      </p>
+    </div>
+
+    <!-- Students Table -->
+    <div ng-if="vm.filteredStudents.length > 0" class="overflow-x-auto">
+      <table class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-50">
+          <tr>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Student Number
+            </th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Name
+            </th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Scholarships
+            </th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Discounts
+            </th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Actions
+            </th>
+          </tr>
+        </thead>
+        <tbody class="bg-white divide-y divide-gray-200">
+          <tr ng-repeat="student in vm.filteredStudents" class="hover:bg-gray-50">
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
+              {{ student.strStudentNumber }}
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
+              {{ student.fullName }}
+            </td>
+            <td class="px-6 py-4 text-sm text-gray-900">
+              <div ng-if="student.scholarships.length > 0">
+                <span ng-repeat="sch in student.scholarships" class="inline-block mb-1">
+                  <span class="inline-flex items-center px-2 py-1 rounded text-xs font-medium"
+                        ng-class="{'bg-green-100 text-green-800': sch.assignment_status === 'active',
+                                   'bg-yellow-100 text-yellow-800': sch.assignment_status === 'pending'}">
+                    {{ sch.name }}
+                    <span class="ml-1 text-xs">({{ sch.assignment_status }})</span>
+                  </span>
+                  <br ng-if="!$last">
+                </span>
+              </div>
+              <span ng-if="student.scholarships.length === 0" class="text-gray-500">None</span>
+            </td>
+            <td class="px-6 py-4 text-sm text-gray-900">
+              <div ng-if="student.discounts.length > 0">
+                <span ng-repeat="disc in student.discounts" class="inline-block mb-1">
+                  <span class="inline-flex items-center px-2 py-1 rounded text-xs font-medium"
+                        ng-class="{'bg-blue-100 text-blue-800': disc.assignment_status === 'active',
+                                   'bg-yellow-100 text-yellow-800': disc.assignment_status === 'pending'}">
+                    {{ disc.name }}
+                    <span class="ml-1 text-xs">({{ disc.assignment_status }})</span>
+                  </span>
+                  <br ng-if="!$last">
+                </span>
+              </div>
+              <span ng-if="student.discounts.length === 0" class="text-gray-500">None</span>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm">
+              <button class="inline-flex items-center px-3 py-1 border border-transparent text-sm leading-4 font-medium rounded text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                      ng-click="vm.viewStudentScholarships(student.student_id)">
+                <i class="fas fa-eye mr-1"></i> View Details
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <!-- Legacy Link (for reference) -->
+  <div class="mt-4 bg-gray-50 rounded border border-gray-200 p-4">
+    <div class="flex items-center justify-between">
+      <div>
+        <h4 class="text-sm font-semibold text-gray-700">Legacy System</h4>
+        <p class="text-xs text-gray-600">For reference, you can still access the old CI page.</p>
+      </div>
+      <a class="inline-flex items-center px-3 py-1 text-sm rounded bg-gray-600 text-white hover:bg-gray-700"
+         ng-href="{{ vm.links.scholarshipStudents }}" target="_blank" rel="noopener">
+        <span class="fas fa-external-link-alt mr-1"></span> Open Legacy
+      </a>
+    </div>
   </div>
 </div>
